--- a/index.html
+++ b/index.html
@@ -6,11 +6,10 @@
     <link rel="icon" href="/assets/favicon.svg" type="image/svg+xml">
     <link rel="stylesheet" href="/assets/default.css">
     <link rel="stylesheet" href="/assets/layout.css">
-    <title>Dezigneur | Dezign Entrepreneur</title>
+    <title>Dezigneur</title>
 </head>
 <body>
-    <h1 class="huge">DEZIGNEUR</h1>
-    <p>Phone: <a href="tel:+84389061870">+8438 906 1870</a> | Email: <a href="mailto:dezigneur@gmail.com">dezigneur@gmail.com</a></p>
-    <script src="/assets/required.js" defer></script>
+    <img src="/assets/logo.svg" alt="dezigneur-logo" width="500">
+    <p>Email: <a href="mailto:dezigneur@gmail.com">dezigneur@gmail.com</a> | Phone: <a href="tel:+84389061870">+84 38 906 1870</a></p>
 </body>
 </html>
