update mobile loading

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 </head>
 
 <body>
+    <img class="loading" src="/assets/favicon.svg" alt="Dezigneur Logo">
     <nav id="main-nav">
         <div class="wrap">
             <a href="#" class="logo">
