meta pinterest added

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="/assets/favicon.svg" type="image/svg+xml">
+    <meta name="p:domain_verify" content="578748de0893eaded4b9e5ea8f4c5d25"/>
     <link rel="stylesheet" href="/assets/global.css">
     <link rel="stylesheet" href="/assets/default.css">
     <link rel="stylesheet" href="/assets/layout.css">
