--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
         <section id="contact">
             <div id="contact-info">
                 <div class="wrap">
-                    <form id="contact-form">
+                    <div id="contact-form">
                         <img src="/assets/media/16482629_5764330.svg">
                         <div>
                             <input type="text" name="yourname" placeholder="John Doe">
@@ -156,7 +156,7 @@
                             <textarea name="yourmsg" placeholder="Your message"></textarea>
                             <button onclick="submitForm()">Send our Message</button>
                         </div>
-                    </form>
+                    </div>
                 </div>
             </div>
             <footer id="contact-footer">
